--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,14 @@ button:hover {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	position: relative;
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.input-wrapper input{
+  padding-right: 40px;
 }
 
 .error-message {
@@ -119,13 +126,16 @@ button:hover {
 }
 
 .loading-spinner {
-	margin: 1%;
-  	width: 20px;
- 	height: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  transform: translateY(-50%);
+  width: 15px;
+ 	height: 15px;
  	border: 4px solid rgba(100, 108, 255, 0.2);
  	border-top: 4px solid #646cff;
  	border-radius: 50%;
-  	animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 @keyframes spin {
 	0% { transform: rotate(0deg); }
